--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "server",
+  "name": "node-business",
   "version": "1.0.0",
-  "main": "app/index.js",
-  "scripts": {
-    "nodemon": "nodemon"
-  },
-  "license": "MIT",
+  "description": "node ",
+  "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "morgan": "^1.8.2",
-    "multer": "^1.3.0"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.14"
   },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": ">=6.11.0"
-  }
+  "keywords": [
+    "node",
+    "express",
+    "mongodb",
+    "vue"
+  ],
+  "author": "Juliette",
+  "license": "ISC"
 }
