--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "description": "node ",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
-    "mongoose": "^5.9.14"
+    "mongoose": "^5.9.14",
+    "utility": "^1.16.3"
   },
   "devDependencies": {},
   "scripts": {
