--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^4.0.0",
+    "config-lite": "^3.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.14",
