--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015"],
+  "presets": ["stage-3"],
   "plugins": [
     "transform-async-to-generator",
     "transform-es2015-modules-commonjs",
