--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "description": "node ",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "config-lite": "^3.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.14",
     "utility": "^1.16.3"
