--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "config-lite": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
@@ -27,6 +28,7 @@
     "babel-register": "^6.26.0"
   },
   "scripts": {
+    "serve": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
