--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.14",
+    "sha1": "^1.1.1",
     "utility": "^1.16.3"
   },
   "devDependencies": {
