--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "config-lite": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
