--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "config-lite": "^3.0.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-assert": "^1.4.1",
