--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,7 @@
     "babel-register": "^6.26.0"
   },
   "scripts": {
-    "serve": "nodemon index.js",
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
